tests/src/frontend/typechecking/invalid/unbound_field_static_tset.sk
base class L{l: Int} {
  static fun lstat(): void {
    void
  }
}
base class R{r: Int} {
  static fun rstat(): void {
    void
  }
}

class A extends L, R {
  static fun astat(): void {
    void
  }
}
class B extends L, R {
  static fun bstat(): void {
    void
  }
}

fun foo(): void {
  x = if (true) {
    A
  } else {
    B
  };
  x::cstat();
  void
}
